# io_chains

./: README.md  chain.py  link.py  linkable.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish.yml
io_chains/: __init__.py
io_chains/_internal/: channel_subscriber.py  link.py  linkable.py  metrics.py  publisher.py  subscriber.py
io_chains/linkables/: extract_link.py  link.py  linkable.py
io_chains/links/: chain.py  collector.py  enricher.py  limit.py  link.py  linkable.py  persistence_link.py  processor.py
io_chains/pubsub/: callback_subscriber.py  channel_subscriber.py  collector.py  envelope.py  publisher.py  sentinel.py  subscriber.py
io_chains/subscribables/: callback_subscriber.py  callbacksubscriber.py  generator_subscriber.py  publisher.py  subscriber.py
io_chains/utils/: converters.py
linkables/: chain.py  consts.py  extract_link.py  link.py  linkable.py  subscriber.py
subscribables/: callbacksubscriber.py  consts.py  publisher.py  subscribable.py  subscriber.py
test/: test_main.py
test/helpers/: limit.py
test/int/: test_link.py
test/ua/: test_processor_ua.py  test_rick_and_morty.py  test_rick_and_morty_complex.py  test_rick_and_morty_enricher.py
test/unit/: test_callback_subscriber.py  test_generator_subscriber.py  test_link.py  test_publisher.py
test/unit/_internal/: test_publisher.py  test_sentinel.py
test/unit/linkables/: test_link.py
test/unit/links/: test_chain.py  test_collector.py  test_enricher.py  test_error_handling.py  test_graceful_shutdown.py  test_link.py  test_observability.py  test_persistence_link.py  test_processor.py
test/unit/pubsub/: test_callback_subscriber.py  test_collector.py  test_publisher.py  test_sentinel.py
test/unit/subscribables/: test_generator_subscriber.py  test_publisher.py
test/unit/utils/: test_converters.py
