[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "io-chains"
version = "0.0.1"
description = "Lightweight async data pipelines using a publisher/subscriber pattern"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Speedy", email = "speedy@ownjoo.org" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "nest-asyncio",
]

[project.urls]
Repository = "https://github.com/ownjoo-org/io-chains"
