[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "oj-io-chains"
version = "0.1.0"
description = "Lightweight async data pipelines using a publisher/subscriber pattern"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Speedy", email = "speedy@ownjoo.org" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
]

[project.urls]
Repository = "https://github.com/ownjoo-org/io-chains"
