[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "oj-io-chains"
version = "0.0.3"
description = "Lightweight async data pipelines using a publisher/subscriber pattern"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Speedy", email = "speedy@ownjoo.org" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx",
]

[project.urls]
Repository = "https://github.com/ownjoo-org/io-chains"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes (unused imports, undefined names, etc.)
    "I",      # isort
    "UP",     # pyupgrade (modernise syntax for target Python version)
    "B",      # flake8-bugbear (common bug patterns)
    "ASYNC",  # flake8-async (async best practices)
    "RUF",    # ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = ["io_chains"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false  # trailing comma forces vertical expansion
